--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.ToDoList"
         tools:targetApi="31">
         <activity
+            android:name=".Data_set"
+            android:exported="false" />
+        <activity
             android:name=".new_task_add"
             android:exported="false" />
         <activity
